--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,6 +62,15 @@
 </section>
 
     </main>
+    <section id="adminPanel" class="page hidden">
+    <h2>Admin Dashboard</h2>
+    <div class="modal-content" style="background: rgba(0,0,0,0.5);">
+        <input type="text" id="studentId" placeholder="Paste User UID here">
+        <button class="btn-primary" onclick="addMonth()">Add 30 Days Access</button>
+        <p id="adminStatus"></p>
+    </div>
+</section>
+
 
     <div id="authModal" class="modal hidden">
         <div class="modal-content">
