--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h2 id="userName" class="gold-text">Student Name</h2>
                 <p id="userEmail" style="color:#aaa; margin-bottom:20px;">student@gmail.com</p>
                 <div class="profile-actions">
-                    <button class="btn-primary" onclick="signOut(auth)" style="width:100%; border-color:#ff4444; color:#ff4444;">Log Out</button>
+                    <button class="btn-primary" onclick="handleSignOut()" style="width:100%; border-color:#ff4444; color:#ff4444;">Log Out</button>
                 </div>
             </div>
 
