--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Kithademic Studies</title>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -42,7 +41,7 @@
             <div class="classroom-container">
                 <div class="video-area">
                     <div class="video-wrapper">
-                        <div id="player" data-plyr-provider="youtube" data-plyr-embed-id=""></div>
+                        <iframe id="mainPlayer" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h2 id="videoTitle">Select a Class to Start</h2>
                 </div>
@@ -106,7 +105,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
