--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="classroom-container">
                 <div class="video-area">
                     <div class="video-wrapper">
-                        <iframe id="mainPlayer" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="mainPlayer" src="" width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h2 id="videoTitle">Select a Class to Start</h2>
                 </div>
