--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="top-brand">
         <div class="logo">
-            <i class="fas fa-book-quran"></i> Kithademic
+            <i class="fas fa-book-quran"></i>
         </div>
         <button class="admin-btn-top" onclick="openAdminCheck()">
             <i class="fas fa-user-shield"></i>
@@ -26,14 +26,14 @@
         <section id="home" class="page active">
             <div class="hero-content">
                 <h1 class="arabic-font">بِسْمِ ٱللَّٰهِ</h1>
-                <h2>Welcome to <span class="gold-text">Kithademic</span></h2>
+                <h2>Welcome to <span class="gold-text">Kithademic Studies</span></h2>
                 <p>Knowledge is the light of the heart.<br>Excellence in Islamic & Academic Education.</p>
                 <button class="btn-primary" onclick="switchTab(document.querySelectorAll('.nav-item')[1], 'courses')">Start Learning</button>
             </div>
         </section>
 
         <section id="courses" class="page hidden">
-            <h2 class="section-title"><span class="gold-text">Premium Courses</span></h2>
+            <h2 class="section-title"><span class="gold-text1">Premium Courses</span></h2>
             <div class="course-grid" id="courseList"></div>
         </section>
 
@@ -87,7 +87,7 @@
             <span class="close" onclick="closeAuthModal()" style="float:right; cursor:pointer; font-size:1.5rem;">&times;</span>
             
             <div id="loginContent" style="text-align: center; padding-bottom: 10px;">
-                <h2 id="modalTitle" style="margin-bottom: 30px;">Student Portal</h2>
+                <h2 id="modalTitle" style="margin-bottom: 30px;">Get Access</h2>
                 <p style="color:#aaa; margin-bottom: 20px; font-size: 0.9rem;">Access your courses and track your progress.</p>
                 <button class="btn-google" onclick="handleGoogleAuth()">
                     <i class="fab fa-google"></i> Continue with Google
