--- a/index.html
+++ b/index.html
@@ -8,6 +8,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        .history-container {
+            margin-top: 20px;
+            text-align: left;
+            width: 100%;
+        }
+        .history-list {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            max-height: 250px;
+            overflow-y: auto;
+            padding-right: 5px;
+        }
+        /* Premium Card Style */
+        .history-card {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            padding: 8px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+        .history-card:hover {
+            background: rgba(238, 187, 93, 0.1);
+            border-color: var(--accent-gold);
+            transform: translateX(5px);
+        }
+        /* Thumbnail */
+        .history-thumb {
+            width: 100px;
+            height: 56px;
+            border-radius: 8px;
+            object-fit: cover;
+            flex-shrink: 0;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        /* Info */
+        .history-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            overflow: hidden;
+        }
+        .history-title {
+            font-size: 0.9rem;
+            color: #fff;
+            font-weight: 600;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-bottom: 4px;
+        }
+        .history-meta {
+            font-size: 0.75rem;
+            color: #aaa;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        /* Play Overlay Icon */
+        .play-overlay {
+            position: absolute;
+            left: 38px; /* Center over 100px image */
+            top: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            font-size: 1.2rem;
+            opacity: 0;
+            transition: 0.3s;
+            text-shadow: 0 2px 5px rgba(0,0,0,0.8);
+        }
+        .history-card:hover .play-overlay { opacity: 1; }
+    </style>
 </head>
 <body>
 
@@ -101,8 +181,8 @@
                 <p id="userEmail" style="color:#aaa; margin-bottom:15px;">student@gmail.com</p>
 
                 <div class="history-container">
-                    <h4 style="color:var(--accent-gold); margin-bottom:10px; text-align:left; font-size: 0.9rem;">
-                        <i class="fas fa-history"></i> Continue Watching
+                    <h4 style="color:var(--accent-gold); margin-bottom:10px; font-size: 0.9rem; border-bottom:1px solid rgba(238, 187, 93, 0.2); padding-bottom:5px;">
+                        <i class="fas fa-history"></i> Recent Activity
                     </h4>
                     <div id="historyList" class="history-list">
                         <p style="color:#666; font-size:0.8rem;">Loading history...</p>
