--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div class="top-brand">
         <div class="logo">
-            <i class="fas fa-book-quran"></i> Kithademic
+            <i class="fas fa-book-quran"></i> 
         </div>
         <button class="admin-btn-top" onclick="openAdminCheck()">
             <i class="fas fa-user-shield"></i>
