--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             overflow-y: auto;
             padding-right: 5px;
         }
-        /* Premium Card Style */
         .history-card {
             display: flex;
             align-items: center;
@@ -42,7 +41,6 @@
             border-color: var(--accent-gold);
             transform: translateX(5px);
         }
-        /* Thumbnail */
         .history-thumb {
             width: 100px;
             height: 56px;
@@ -51,7 +49,6 @@
             flex-shrink: 0;
             box-shadow: 0 4px 10px rgba(0,0,0,0.5);
         }
-        /* Info */
         .history-info {
             display: flex;
             flex-direction: column;
@@ -74,10 +71,9 @@
             align-items: center;
             gap: 5px;
         }
-        /* Play Overlay Icon */
         .play-overlay {
             position: absolute;
-            left: 38px; /* Center over 100px image */
+            left: 38px;
             top: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
@@ -88,10 +84,7 @@
         }
         .history-card:hover .play-overlay { opacity: 1; }
         
-        /* Back Button Hover */
-        button:hover {
-            opacity: 0.8;
-        }
+        button:hover { opacity: 0.8; }
     </style>
 </head>
 <body>
@@ -122,7 +115,7 @@
 
         <section id="classroom" class="page hidden">
             <div style="width: 95%; max-width: 1300px; margin: 0 auto 15px auto; text-align: left;">
-                <button onclick="goBackToCourses()" 
+                <button id="backToCoursesBtn" 
                         style="background: transparent; border: 1px solid var(--accent-gold); color: var(--accent-gold); padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 0.9rem; display: flex; align-items: center; gap: 8px;">
                     <i class="fas fa-arrow-left"></i> Back to Courses
                 </button>
@@ -198,6 +191,6 @@
         </div>
     </div>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?v=2"></script>
 </body>
 </html>
